RESOLVED FIXED45107
SVG atlas map slider doesn't work properly
https://bugs.webkit.org/show_bug.cgi?id=45107
Summary SVG atlas map slider doesn't work properly
Nikolas Zimmermann
Reported 2010-09-02 05:00:00 PDT
Created attachment 66360 [details] Partly reduced testcase The SVG Atlas Map from IE9 Test Center (vis.uell.net) contains a slider, which doesn't respond to move events as expected. A mousemove listener is attached to the <svg> root element, and events are only fired, when moving the mouse over areas that contain graphical elements. SVG 1.1 2nd edition also allows to fire events when hovering over container elements (like <svg>). The old behaviour implemented in WebKit now, also doesn't make any sense. This was brought to attention @ SVG Open 2010, Michael Neutze the author of atlas map was so kind to reduce the problem, attaching his testcase (not really reduced, but I'm containing two reduced testcases in my patch)
Attachments
Partly reduced testcase (21.69 KB, application/xhtml+xml)
2010-09-02 05:00 PDT, Nikolas Zimmermann
no flags
Patch (119.45 KB, patch)
2010-09-03 07:17 PDT, Nikolas Zimmermann
krit: review+
Nikolas Zimmermann
Comment 1 2010-09-03 07:16:05 PDT
*** Bug 45170 has been marked as a duplicate of this bug. ***
Nikolas Zimmermann
Comment 2 2010-09-03 07:17:10 PDT
Created attachment 66490 [details] Patch Fixes all problems with the SVG "Bevoelkerungspyramide".
Dirk Schulze
Comment 3 2010-09-03 07:22:30 PDT
Comment on attachment 66490 [details] Patch I'd write the comment before the if, but that's matter of opinion. r=me.
Nikolas Zimmermann
Comment 4 2010-09-03 07:28:05 PDT
Thanks Dirk, landed in r66731. Michael, please retry with a nightly >= 66731, once it's available.
Michael N.
Comment 5 2010-09-06 10:03:10 PDT
ok, this looks very good and is a huge improvement. tested in r66819 on OSX 10.6.4 I am still not sure if text that's set to "pointer-events: none" should be selectable but I now know how to cover that with prventDefault.
Nikolas Zimmermann
Comment 6 2010-09-07 12:59:03 PDT
(In reply to comment #5) > ok, this looks very good and is a huge improvement. > tested in r66819 on OSX 10.6.4 Good to hear, glad it works fine. > I am still not sure if text that's set to "pointer-events: none" should be selectable but I now know how to cover that with prventDefault. Hm, can you try to look up a relevant section in the SVG spec? My feeling is that you're right, if you can find any part of the spec that supports this view, please file another bug. Happy to fix, it you find evidence that we're wrong :-) (despite what other browsers do)
Andy Estes
Comment 7 2011-01-04 20:24:57 PST
Note You need to log in before you can comment on or make changes to this bug.