2010-09-03  Nikolas Zimmermann  <nzimmermann@rim.com>

Reviewed by Dirk Schulze.

        SVG atlas map slider doesn't work properly
        https://bugs.webkit.org/show_bug.cgi?id=45107

        SVG 1.1 2nd edition relaxes hit testing rules. The outermost <svg> should react
        to mouse events, in standalone and compound documents, if the mouse location is
        within the intrinsic boundaries of the <svg> element.

        Tests: svg/custom/mouse-move-on-svg-container-standalone.svg
               svg/custom/mouse-move-on-svg-container.xhtml
               svg/custom/mouse-move-on-svg-root-standalone.svg
               svg/custom/mouse-move-on-svg-root.xhtml

        * rendering/RenderSVGRoot.cpp:
        (WebCore::RenderSVGRoot::nodeAtPoint):

2010-09-03  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Dirk Schulze.

        SVG atlas map slider doesn't work properly
        https://bugs.webkit.org/show_bug.cgi?id=45107

        * platform/mac/svg/custom/mouse-move-on-svg-container-expected.checksum: Added.
        * platform/mac/svg/custom/mouse-move-on-svg-container-expected.png: Added.
        * platform/mac/svg/custom/mouse-move-on-svg-container-expected.txt: Added.
        * platform/mac/svg/custom/mouse-move-on-svg-container-standalone-expected.checksum: Added.
        * platform/mac/svg/custom/mouse-move-on-svg-container-standalone-expected.png: Added.
        * platform/mac/svg/custom/mouse-move-on-svg-container-standalone-expected.txt: Added.
        * platform/mac/svg/custom/mouse-move-on-svg-root-expected.checksum: Added.
        * platform/mac/svg/custom/mouse-move-on-svg-root-expected.png: Added.
        * platform/mac/svg/custom/mouse-move-on-svg-root-expected.txt: Added.
        * platform/mac/svg/custom/mouse-move-on-svg-root-standalone-expected.checksum: Added.
        * platform/mac/svg/custom/mouse-move-on-svg-root-standalone-expected.png: Added.
        * platform/mac/svg/custom/mouse-move-on-svg-root-standalone-expected.txt: Added.
        * svg/custom/mouse-move-on-svg-container-standalone.svg: Added.
        * svg/custom/mouse-move-on-svg-container.xhtml: Added.
        * svg/custom/mouse-move-on-svg-root-standalone.svg: Added.
        * svg/custom/mouse-move-on-svg-root.xhtml: Added.


Canonical link: https://commits.webkit.org/57490@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66731 268f45cc-cd09-0410-ab3c-d52691b4dbfc